--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"express": "^4.18.1",
 		"express-async-handler": "^1.2.0",
 		"console-stamp": "^3.0.6",
+		"morgan": "^1.10.0",
 		"pg": "^8.7.3",
 		"string-hex": "^1.0.0"
 	}
