--- a/config.example.json
+++ b/config.example.json
@@ -41,5 +41,11 @@
 			]
 		}
 	},
+	"monitoring": {
+		"canary_cycle": 60000,
+		"peppermint_canary_timeout": 120000,
+		"mintery_canary_timeout": 120000,
+		"floor_peppermint_id": 0
+	},
 	"polling_delay": 10000
 }
