--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"@pinata/sdk": "^1.1.26",
 		"console-stamp": "^3.0.6",
+		"exit-hook": "^3.1.4",
 		"express": "^4.18.1",
 		"express-async-handler": "^1.2.0",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.3",
-		"@pinata/sdk": "^1.1.26",
 		"sharp": "^0.30.7"
 	}
 }
