Update uuid dependency

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"express-async-handler": "^1.2.0",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.3",
-		"sharp": "^0.30.7"
+		"sharp": "^0.30.7",
+		"uuid": "^9.0.0"
 	}
 }
